kullanici avatarini guncelleme islemi tamamlandi
