# app/Http/Controllers/UserController.php
@@ -50,10 +50,11 @@ class UserController extends Controller
         // paginate edilen sayfa da kayıt yoksa
         if (User::paginate(10)->lastPage() < $page) {
             return response()->json([
-                'error' => '?page=' . $page . ' sayfasında herhangi bir kayıt bulunamadı!'
+                'error' => '?page=' . $page . ' sayfasında herhangi bir veri bulunamadı!'
             ], 404);
         }
         return response()->json([
+            'success' => 'Veri(ler) başarıyla listelendi.',
             'users' => UserResource::collection(User::orderBy('id', 'desc')->paginate(10, ['*'], 'page', $page))
         ], 200);
     }
@@ -109,25 +110,25 @@ class UserController extends Controller
         $search = $request->has('search') ? $request->search : '';
         $sort = $request->has('sort') ? $request->sort : 'id';
         $order = $request->has('order') ? $request->order : 'desc';
-        $users = User::where('name', 'like', '%' . $search . '%')
-            ->orWhere('email', 'like', '%' . $search . '%')
-            ->orWhere('phone', 'like', '%' . $search . '%')
-            ->orWhere('id', 'like', '%' . $search . '%')
-            ->orderBy($sort, $order)
-            ->paginate($perPage, ['*'], 'page', $page);
+        $columns = ['id', 'name', 'email', 'phone', 'created_at', 'updated_at'];
+        $users = User::where(function ($query) use ($search, $columns) {
+            foreach ($columns as $column) {
+                $query->orWhere($column, 'like', '%' . $search . '%');
+            }
+        })->orderBy($sort, $order)->paginate($perPage, ['*'], 'page', $page);
         if ($users->lastPage() < $page) {
             return response()->json([
-                'error' => '?page=' . $page . ' sayfasında herhangi bir kayıt bulunamadı!'
+                'error' => '?page=' . $page . ' sayfasında herhangi bir veri bulunamadı!'
             ], 404);
         }
         if ($users->count() == 0) {
             return response()->json([
-                'error' => 'Aranan kriterlere uygun herhangi bir kayıt bulunamadı!'
+                'error' => 'Aranan kriterlere uygun herhangi bir veri bulunamadı!'
             ], 404);
         }
         return response()->json([
-            'success' => 'Kullanıcı(lar) başarıyla listelendi.',
-            'found' => $users->total() . ' adet kullanıcı bulundu.',
+            'success' => 'Veri(ler) başarıyla listelendi.',
+            'found' => $users->total() . ' adet veri bulundu.',
             'users' => UserResource::collection($users)
         ], 200);
     }
@@ -175,12 +176,12 @@ class UserController extends Controller
             $user = User::create($req);
             $user = User::where('email', $user->email)->first();
             return response()->json([
-                'success' => 'Kullanıcı başarıyla oluşturuldu.',
+                'success' => 'Veri kaydı başarıyla oluşturuldu.',
                 'user' => new UserResource($user)
             ], 201);
         } catch (\Exception $e) {
             return response()->json([
-                'error' => "Kullanıcı oluşturulurken bir hata oluştu. Hata: " . $e->getMessage()
+                'error' => "Veri kaydı oluşturulurken bir hata oluştu. Hata: " . $e->getMessage()
             ], 500);
         }
     }
@@ -194,7 +195,7 @@ class UserController extends Controller
      *      summary="Get user information",
      *      description="Returns user data",
      *      operationId="show",
-     *      @OA\Parameter(name="id", description="User id", required=true, in="path", example="ffc6d76e-0804-4b5c-8608-db0881b34a84",
+     *      @OA\Parameter(name="id", description="User id", required=true, in="path", example="ff130212-b3e9-4417-8363-df0848c3abdf",
      *          @OA\Schema(type="string")
      *      ),
      *      @OA\Response(
@@ -215,7 +216,7 @@ class UserController extends Controller
         $user = User::find($id);
         if (!$user) {
             return response()->json([
-                'error' => 'Aradığınız kullanıcı bulunamadı!'
+                'error' => 'Aradığınız ID ile ilgili herhangi bir veri bulunamadı!'
             ], 404);
         }
         return response()->json([
@@ -232,7 +233,7 @@ class UserController extends Controller
      *      summary="Update user information",
      *      description="Returns user data",
      *      operationId="update",
-     *      @OA\Parameter(name="id", description="User id", required=true, in="path", example="ffc6d76e-0804-4b5c-8608-db0881b34a84",
+     *      @OA\Parameter(name="id", description="User id", required=true, in="path", example="ff130212-b3e9-4417-8363-df0848c3abdf",
      *          @OA\Schema(type="string")
      *      ),
      *      @OA\RequestBody(
@@ -269,17 +270,19 @@ class UserController extends Controller
     {
         $user = User::find($id);
         if (!$user) {
-            return response()->json(['error' => 'Kullanıcı bulunamadı!'], 404);
+            return response()->json([
+                'error' => 'Güncellemeye çalıştığınız ID ile ilgili herhangi bir veri bulunamadı!'
+            ], 404);
         }
         try {
             $user->update($request->validated());
             return response()->json([
-                'success' => 'Kullanıcı başarıyla güncellendi.',
+                'success' => 'Veri başarıyla güncellendi.',
                 'user' => new UserResource($user)
             ], 200);
         } catch (\Exception $e) {
             return response()->json([
-                'error' => "Kullanıcı güncellenirken bir hata oluştu. Hata: " . $e->getMessage()
+                'error' => "Veri güncellenirken bir hata oluştu. Hata: " . $e->getMessage()
             ], 500);
         }
     }
@@ -293,7 +296,7 @@ class UserController extends Controller
      *      summary="Delete user",
      *      description="Returns user data",
      *      operationId="destroy",
-     *      @OA\Parameter(name="id", description="User id", required=true, in="path", example="ffc6d76e-0804-4b5c-8608-db0881b34a84",
+     *      @OA\Parameter(name="id", description="User id", required=true, in="path", example="ff130212-b3e9-4417-8363-df0848c3abdf",
      *          @OA\Schema(type="string")
      *      ),
      *      @OA\Response(
@@ -320,7 +323,9 @@ class UserController extends Controller
     {
         $user = User::find($id);
         if (!$user) {
-            return response()->json(['error' => 'Kullanıcı bulunamadı!'], 404);
+            return response()->json([
+                'error' => 'Silmeye çalıştığınız ID ile ilgili herhangi bir veri bulunamadı!'
+            ], 404);
         }
         try {
             if (isset($user->avatar)) {
@@ -328,12 +333,12 @@ class UserController extends Controller
             }
             $user->delete();
             return response()->json([
-                'success' => 'Kullanıcı başarıyla silindi.',
+                'success' => 'Veri başarıyla silindi.',
                 'user' => new UserResource($user)
             ], 200);
         } catch (\Exception $e) {
             return response()->json([
-                'error' => "Kullanıcı silinirken bir hata oluştu. Hata: " . $e->getMessage()
+                'error' => "Veri silinirken bir hata oluştu. Hata: " . $e->getMessage()
             ], 500);
         }
     }
@@ -352,7 +357,7 @@ class UserController extends Controller
      *          @OA\JsonContent(
      *               @OA\Property(
      *                  property="ids", type="array",
-     *                  example={"ffc6d76e-0804-4b5c-8608-db0881b34a84", "ffc6d76e-0804-4b5c-8608-db0881b34a84"},
+     *                  example={"ffc6d76e-0804-4b5c-8608-db0881b34a84", "ff130212-b3e9-4417-8363-df0848c3abdf"},
      *                  @OA\Items(type="string")),
      *          )
      *      ),
@@ -389,31 +394,46 @@ class UserController extends Controller
                     $user->delete();
                 }
                 return response()->json([
-                    'success' => 'Kullanıcı(lar) başarıyla silindi.',
+                    'success' => 'Veri(ler) başarıyla silindi.',
                 ], 200);
             }
-            return response()->json(['error' => 'Kullanıcı(lar) bulunamadı!'], 404);
+            return response()->json(['error' => 'Silmeye çalıştığınız veri(ler) bulunamadı!'], 404);
         } catch (\Exception $e) {
             return response()->json([
-                'error' => "Kullanıcı(lar) silinirken bir hata oluştu. Hata: " . $e->getMessage()
+                'error' => "Veri(ler) silinirken bir hata oluştu. Hata: " . $e->getMessage()
             ], 500);
         }
     }
 
     // swagger change avatar user
-
     /**
-     * @OA\Put(
-     *      path="/api/users/change/avatar",
+     * @OA\Post(
+     *      path="/api/users/{id}/avatar",
      *      tags={"Users"},
      *      summary="Change avatar user",
      *      description="Returns user data",
-     *      operationId="changeAvatar",
-     *      @OA\RequestBody(
-     *          required=true,
-     *          @OA\JsonContent(
-     *               @OA\Property(property="avatar", type="string", example="ffc6d76e-0804-4b5c-8608-db0881b34a84"),
-     *          )
+     *      operationId="avatar",
+     *      @OA\Parameter(name="id", description="User id", required=true, in="query", example="ff130212-b3e9-4417-8363-df0848c3abdf",
+     *          @OA\Schema(type="string")
+     *      ),
+     *       @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 required={"image"},
+     *                 allOf={
+     *                     @OA\Schema(
+     *                         @OA\Property(
+     *                             description="Avatar",
+     *                             property="image",
+     *                             type="string",
+     *                             format="binary",
+     *                         )
+     *                     )
+     *                 }
+     *             )
+     *         )
      *      ),
      *      @OA\Response(
      *          response=200,
@@ -435,11 +455,13 @@ class UserController extends Controller
      *      ),
      * )
      */
-    public function changeAvatar(ImageRequest $request)
+    public function avatar(ImageRequest $request)
     {
         $user = User::find($request->id);
         if (!$user) {
-            return response()->json(['error' => 'Kullanıcı bulunamadı!'], 404);
+            return response()->json([
+                'error' => 'Avatar\'ını değiştirmeye çalıştığınız ID ile ilgili herhangi bir veri bulunamadı!'
+            ], 404);
         }
         try {
             if (isset($user->avatar)) {
@@ -448,12 +470,12 @@ class UserController extends Controller
             $user->avatar = $request->file('image')->store('uploads/users', 'public');
             $user->save();
             return response()->json([
-                'success' => 'Kullanıcı avatarı başarıyla güncellendi.',
+                'success' => 'Avatar başarıyla değiştirildi.',
                 'user' => $user
             ], 200);
         } catch (\Exception $e) {
             return response()->json([
-                'error' => "Kullanıcı avatarı güncellenirken bir hata oluştu. Hata: " . $e->getMessage()
+                'error' => "Avatar güncellenirken bir hata oluştu. Hata: " . $e->getMessage()
             ], 500);
         }
     }
